--- a/src/index.html
+++ b/src/index.html
@@ -39,34 +39,34 @@
 	<!--[if lte IE 8]>
 		<script>(function(){var e="abbr,article,aside,audio,canvas,datalist,details,figure,footer,header,hgroup,mark,menu,meter,nav,output,progress,section,time,video".split(','),i=e.length;while(i--){document.createElement(e[i]);}}());</script>
 	<![endif]-->
-	<div class="container-fluid">
 
-		<div class="nav navbar navbar-default navbar-fixed-top" role="navigation">
-			<div class="container-fluid">
-				<div class="nav-header">
-					<button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only"> Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href='/'> Facade-Angular </a>
-				</div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li>
-							<a href='/about'> About </a>
-						</li>
-					</ul>
-				</div>
+	<div class="nav navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container-fluid">
+			<div class="nav-header">
+				<button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only"> Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href='/'> Facade-Angular </a>
+			</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li>
+						<a href='/about'> About </a>
+					</li>
+				</ul>
 			</div>
 		</div>
-
-		<div id="content" ng-view></div>
-
 	</div>
 
-    <!-- Site JavaScript -->
+	<div id="content" ng-view></div>
+
+	<!-- Google Maps API -->
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXSQrFbbA7tlwdETKvc-NBBoVtsOljnJc&sensor=false"></script>
+
+	<!-- Site JavaScript -->
 	<script src='/scripts/bundle.js'></script>
 
 	<!-- Bootstrap JS -->
