--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Title of site -->
-	<title> Facade-Angular </title>
+	<title> TFL IS WATCHING </title>
 
 	<!-- Metadata about site -->
 	<meta name="Copyright" content="" />
@@ -39,27 +39,6 @@
 	<!--[if lte IE 8]>
 		<script>(function(){var e="abbr,article,aside,audio,canvas,datalist,details,figure,footer,header,hgroup,mark,menu,meter,nav,output,progress,section,time,video".split(','),i=e.length;while(i--){document.createElement(e[i]);}}());</script>
 	<![endif]-->
-
-	<div class="nav navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="container-fluid">
-			<div class="nav-header">
-				<button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only"> Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href='/'> Facade-Angular </a>
-			</div>
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li>
-						<a href='/about'> About </a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
 
 	<div id="content" ng-view></div>
 
