Fixes #2 : Fix rendering of application
Move styles to main.scss


Fix webpack settings for test

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,15 @@
     http-equiv="X-UA-Compatible"
     content="ie=edge"
   >
-  <title>Document</title>
+  <title> The TFL Is Watching </title>
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <div ng-view></div>
+  </div>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfl_DFP2ZuL7e6x8mNAO0xEt43qUmz9LQ">
+  </script>
 </body>
 
 </html>
